<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_device_scan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title_unconn_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cloud"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/unconn_device" />

    <ListView
        android:id="@+id/list_unconn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_unconn_device"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/list_unconn"
        android:layout_below="@+id/list_unconn"
        android:layout_marginTop="39dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sendReadPeriod"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/sendReadPeriod_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="200"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_ms"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>
